# rust-excel-app

./: Cargo.toml  README.md
files/input/: test.xlsx
src/: adapter.rs  lib.rs  main.rs
src/adapter/: excel.rs  tsv.rs
src/domain/model/: excel.rs
