[package]
name = "excel-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.25.0"
serde = { version = "1.0.200", features = ["derive"] }
csv = "1.3.0"

[dev-dependencies]
claim = "0.5.0"